project completion till date

--- a/index.html
+++ b/index.html
@@ -7,83 +7,87 @@
         <link rel="stylesheet" href="./style/style.css" />
     </head>
     <body>
-        <header class="header">
-            <nav>
-                <div class="logo">
-                    <a href="#">adamkeyes</a>
-                </div>
-                <div class="social-icons">
-                    <a href="github.com"
-                        ><img
-                            src="./assets/images/icon-github.svg"
-                            alt="github"
-                            width="24.81"
-                            height="24"
-                    /></a>
-                    <a href="linkedin.com"
-                        ><img
-                            src="./assets/images/icon-linkedin.svg"
-                            alt="linkedin"
-                            width="24"
-                            height="24"
-                    /></a>
-                    <a href="x.com"
-                        ><img
-                            src="./assets/images/icon-twitter.svg"
-                            alt="twitter"
-                            width="23.28"
-                            height="18.93"
-                    /></a>
-                </div>
-            </nav>
-        </header>
-        <main class="main">
-            <div class="container">
-                <section class="hero-area">
-                    <div class="text-block">
-                        <h1>
-                            Nice to meet you! <br />
-                            I'm <span class="styled-text">Adam Keyes</span>.
-                        </h1>
-                        <p>
-                            Based in the UK, I'm a front-end developer
-                            passionate about building accessible web apps that
-                            users love.
-                        </p>
-                        <a href="#contact">Contact Me</a>
+        <div class="container">
+            <header class="header">
+                <nav class="navigation">
+                    <div class="logo">
+                        <a href="#">adamkeyes</a>
                     </div>
-                    <div class="img-block">
-                        <img
-                            src="./assets/images/image-profile-desktop.webp"
-                            alt="profile image"
-                        />
+                    <div class="social-icons">
+                        <a href="github.com"
+                            ><img
+                                src="./assets/images/icon-github.svg"
+                                alt="github"
+                                width="24.81"
+                                height="24"
+                        /></a>
+                        <a href="linkedin.com"
+                            ><img
+                                src="./assets/images/icon-linkedin.svg"
+                                alt="linkedin"
+                                width="24"
+                                height="24"
+                        /></a>
+                        <a href="x.com"
+                            ><img
+                                src="./assets/images/icon-twitter.svg"
+                                alt="twitter"
+                                width="23.28"
+                                height="18.93"
+                        /></a>
+                    </div>
+                </nav>
+            </header>
+            <main class="main">
+                <section class="hero-area">
+                    <div class="wrapper">
+                        <div class="text-block">
+                            <h1>
+                                Nice to meet you! <br />
+                                I'm <span class="styled-text">Adam Keyes</span>.
+                            </h1>
+                            <p>
+                                Based in the UK, I'm a front-end developer
+                                passionate about building accessible web apps
+                                that users love.
+                            </p>
+                            <a href="#contact">Contact Me</a>
+                        </div>
+                        <div class="img-block">
+                            <img
+                                src="./assets/images/image-profile-desktop.webp"
+                                alt="profile image"
+                            />
+                        </div>
                     </div>
                 </section>
                 <hr />
                 <section class="skillsets">
-                    <div>
-                        <h3>HTML</h3>
-                        <p>4 Years Experience</p>
-                    </div>
-                    <div>
-                        <h3>CSS</h3>
-                        <p>4 Years Experience</p>
-                    </div>
-                    <div>
-                        <h3>Javascript</h3>
-                        <p>4 Years Experience</p>
-                    </div>
-                    <div>
-                        <h3>Accessibility</h3>
-                        <p>4 Years Experience</p>
-                    </div>
-                    <div>
-                        <h3>React</h3>
-                        <p>3 Years Experience</p>
-                    </div>
-                    <div>
-                        <h3>Sass</h3>
-                        <p>3 Years Experience</p>
+                    <div class="skill-wrapper">
+                        <div class="skill">
+                            <h3>HTML</h3>
+                            <p>4 Years Experience</p>
+                        </div>
+                        <div class="skill">
+                            <h3>CSS</h3>
+                            <p>4 Years Experience</p>
+                        </div>
+                        <div class="skill">
+                            <h3>Javascript</h3>
+                            <p>4 Years Experience</p>
+                        </div>
+                        <div class="skill">
+                            <h3>React</h3>
+                            <p>4 Years Experience</p>
+                        </div>
+                        <div class="skill">
+                            <h3>Next.js</h3>
+                            <p>3 Years Experience</p>
+                        </div>
+                        <div class="skill">
+                            <h3>Sass</h3>
+                            <p>3 Years Experience</p>
+                        </div>
                     </div>
                 </section>
                 <section class="projects">
@@ -156,10 +160,8 @@
                         </div>
                     </div>
                 </section>
-            </div>
-        </main>
-        <footer class="footer">
-            <div>
+            </main>
+            <footer class="footer">
                 <div class="logo">
                     <a href="#">adamkeyes</a>
                 </div>
@@ -186,7 +188,7 @@
                             height="18.93"
                     /></a>
                 </div>
-            </div>
-        </footer>
+            </footer>
+        </div>
     </body>
 </html>
