--- a/index.html
+++ b/index.html
@@ -1,194 +1,332 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Adam Keyes Portfolio</title>
-        <link rel="stylesheet" href="./style/style.css" />
-    </head>
-    <body>
-        <div class="container">
-            <header class="header">
-                <nav class="navigation">
-                    <div class="logo">
-                        <a href="#">adamkeyes</a>
-                    </div>
-                    <div class="social-icons">
-                        <a href="github.com"
-                            ><img
-                                src="./assets/images/icon-github.svg"
-                                alt="github"
-                                width="24.81"
-                                height="24"
-                        /></a>
-                        <a href="linkedin.com"
-                            ><img
-                                src="./assets/images/icon-linkedin.svg"
-                                alt="linkedin"
-                                width="24"
-                                height="24"
-                        /></a>
-                        <a href="x.com"
-                            ><img
-                                src="./assets/images/icon-twitter.svg"
-                                alt="twitter"
-                                width="23.28"
-                                height="18.93"
-                        /></a>
-                    </div>
-                </nav>
-            </header>
-            <main class="main">
-                <section class="hero-area">
-                    <div class="wrapper">
-                        <div class="text-block">
-                            <h1>
-                                Nice to meet you! <br />
-                                I'm <span class="styled-text">Adam Keyes</span>.
-                            </h1>
-                            <p>
-                                Based in the UK, I'm a front-end developer
-                                passionate about building accessible web apps
-                                that users love.
-                            </p>
-                            <a href="#contact">Contact Me</a>
-                        </div>
-                        <div class="img-block">
-                            <img
-                                src="./assets/images/image-profile-desktop.webp"
-                                alt="profile image"
-                            />
-                        </div>
-                    </div>
-                </section>
-                <hr />
-                <section class="skillsets">
-                    <div class="skill-wrapper">
-                        <div class="skill">
-                            <h3>HTML</h3>
-                            <p>4 Years Experience</p>
-                        </div>
-                        <div class="skill">
-                            <h3>CSS</h3>
-                            <p>4 Years Experience</p>
-                        </div>
-                        <div class="skill">
-                            <h3>Javascript</h3>
-                            <p>4 Years Experience</p>
-                        </div>
-                        <div class="skill">
-                            <h3>React</h3>
-                            <p>4 Years Experience</p>
-                        </div>
-                        <div class="skill">
-                            <h3>Next.js</h3>
-                            <p>3 Years Experience</p>
-                        </div>
-                        <div class="skill">
-                            <h3>Sass</h3>
-                            <p>3 Years Experience</p>
-                        </div>
-                    </div>
-                </section>
-                <section class="projects">
-                    <div class="title-box">
-                        <div class="title">
-                            <h2>Projects</h2>
-                        </div>
-                        <div class="cta">
-                            <a href="#contact">Contact Me</a>
-                        </div>
-                    </div>
-                    <div class="all-projects">
-                        <div>
-                            <img
-                                src="./assets/images/thumbnail-project-1-large.webp"
-                                alt="design portfolio"
-                            />
-                            <h4>DESIGN PORTFOLIO</h4>
-                            <p>HTML</p>
-                            <p>CSS</p>
-                        </div>
-                        <div>
-                            <img
-                                src="./assets/images/thumbnail-project-2-large.webp"
-                                alt="e-learning landing page"
-                            />
-                            <h4>E-LEARNING LANDING PAGE</h4>
-                            <p>HTML</p>
-                            <p>CSS</p>
-                        </div>
-                        <div>
-                            <img
-                                src="./assets/images/thumbnail-project-3-large.webp"
-                                alt="todo web app"
-                            />
-                            <h4>TODO WEB APP</h4>
-                            <p>HTML</p>
-                            <p>CSS</p>
-                            <p>JAVASCRIPT</p>
-                        </div>
-                        <div>
-                            <img
-                                src="./assets/images/thumbnail-project-4-large.webp"
-                                alt="entertainment app"
-                            />
-                            <h4>ENTERTAINMENT WEB APP</h4>
-                            <p>HTML</p>
-                            <p>CSS</p>
-                            <p>JAVASCRIPT</p>
-                        </div>
-                        <div>
-                            <img
-                                src="./assets/images/thumbnail-project-5-large.webp"
-                                alt="memory game"
-                            />
-                            <h4>MEMORY GAME</h4>
-                            <p>HTML</p>
-                            <p>CSS</p>
-                            <p>JAVASCRIPT</p>
-                        </div>
-                        <div>
-                            <img
-                                src="./assets/images/thumbnail-project-6-large.webp"
-                                alt="art gallery"
-                            />
-                            <h4>ART GALLERY SHOWCASE</h4>
-                            <p>HTML</p>
-                            <p>CSS</p>
-                            <p>JAVASCRIPT</p>
-                        </div>
-                    </div>
-                </section>
-            </main>
-            <footer class="footer">
-                <div class="logo">
-                    <a href="#">adamkeyes</a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <title>Adam Keyes Portfolio</title>
+    <link
+      rel="stylesheet"
+      href="./style/style.css"
+    />
+  </head>
+  <body>
+    <img
+      class="oval"
+      src="./assets//images/hero-oval.png"
+      alt=""
+    />
+    <div class="container">
+      <header class="header">
+        <nav class="navigation">
+          <div class="logo">
+            <a href="#">adamkeyes</a>
+          </div>
+          <div class="social-icons">
+            <a href="github.com"
+              ><img
+                src="./assets/images/icon-github.svg"
+                alt="github"
+                width="24.81"
+                height="24"
+            /></a>
+            <a href="linkedin.com"
+              ><img
+                src="./assets/images/icon-linkedin.svg"
+                alt="linkedin"
+                width="24"
+                height="24"
+            /></a>
+            <a href="x.com"
+              ><img
+                src="./assets/images/icon-twitter.svg"
+                alt="twitter"
+                width="23.28"
+                height="18.93"
+            /></a>
+          </div>
+        </nav>
+      </header>
+      <main class="main">
+        <section class="hero-area">
+          <div class="wrapper">
+            <div class="text-block">
+              <h1>
+                Nice to meet you! <br />
+                I'm <span class="styled-text">Adam Keyes</span>.
+              </h1>
+              <p>
+                Based in the UK, I'm a front-end developer passionate about building accessible web apps that users
+                love.
+              </p>
+              <a
+                class="btn-outline-primary"
+                href="#contact"
+                >Contact Me</a
+              >
+            </div>
+            <div class="img-block">
+              <img
+                src="./assets/images/image-profile-desktop.webp"
+                alt="profile image"
+              />
+            </div>
+          </div>
+        </section>
+        <hr />
+        <section class="skillsets">
+          <div class="skill-wrapper">
+            <div class="skill">
+              <h3>HTML</h3>
+              <p>4 Years Experience</p>
+            </div>
+            <div class="skill">
+              <h3>CSS</h3>
+              <p>4 Years Experience</p>
+            </div>
+            <div class="skill">
+              <h3>Javascript</h3>
+              <p>4 Years Experience</p>
+            </div>
+            <div class="skill">
+              <h3>React</h3>
+              <p>4 Years Experience</p>
+            </div>
+            <div class="skill">
+              <h3>Next.js</h3>
+              <p>3 Years Experience</p>
+            </div>
+            <div class="skill">
+              <h3>Sass</h3>
+              <p>3 Years Experience</p>
+            </div>
+          </div>
+        </section>
+        <section class="projects">
+          <div class="title-box">
+            <h2 class="title">Projects</h2>
+
+            <a
+              class="btn-outline-primary"
+              href="#contact"
+              >Contact Me</a
+            >
+          </div>
+          <div class="all-projects">
+            <div>
+              <div class="img-container">
+                <img
+                  src="./assets/images/thumbnail-project-1-large.webp"
+                  alt="design portfolio"
+                />
+
+                <div class="btn-container">
+                  <a
+                    class="btn-outline-primary"
+                    href="#contact"
+                    >View Project</a
+                  >
+                  <a
+                    class="btn-outline-primary"
+                    href="#"
+                    >View Code</a
+                  >
                 </div>
-                <div class="social-icons">
-                    <a href="github.com"
-                        ><img
-                            src="./assets/images/icon-github.svg"
-                            alt="github"
-                            width="24.81"
-                            height="24"
-                    /></a>
-                    <a href="linkedin.com"
-                        ><img
-                            src="./assets/images/icon-linkedin.svg"
-                            alt="linkedin"
-                            width="24"
-                            height="24"
-                    /></a>
-                    <a href="x.com"
-                        ><img
-                            src="./assets/images/icon-twitter.svg"
-                            alt="twitter"
-                            width="23.28"
-                            height="18.93"
-                    /></a>
+              </div>
+              <h4>DESIGN PORTFOLIO</h4>
+              <span>HTML</span>
+              <span>CSS</span>
+            </div>
+            <div>
+              <div class="img-container">
+                <img
+                  src="./assets/images/thumbnail-project-2-large.webp"
+                  alt="e-learning landing page"
+                />
+                <div class="btn-container">
+                  <a
+                    class="btn-outline-primary"
+                    href="#contact"
+                    >View Project</a
+                  >
+                  <a
+                    class="btn-outline-primary"
+                    href="#"
+                    >View Code</a
+                  >
                 </div>
-            </footer>
+              </div>
+              <h4>E-LEARNING LANDING PAGE</h4>
+              <span>HTML</span>
+              <span>CSS</span>
+            </div>
+            <div>
+              <div class="img-container">
+                <img
+                  src="./assets/images/thumbnail-project-3-large.webp"
+                  alt="todo web app"
+                />
+                <div class="btn-container">
+                  <a
+                    class="btn-outline-primary"
+                    href="#contact"
+                    >View Project</a
+                  >
+                  <a
+                    class="btn-outline-primary"
+                    href="#"
+                    >View Code</a
+                  >
+                </div>
+              </div>
+              <h4>TODO WEB APP</h4>
+              <span>HTML</span>
+              <span>CSS</span>
+              <span>JAVASCRIPT</span>
+            </div>
+            <div>
+              <div class="img-container">
+                <img
+                  src="./assets/images/thumbnail-project-4-large.webp"
+                  alt="entertainment app"
+                />
+                <div class="btn-container">
+                  <a
+                    class="btn-outline-primary"
+                    href="#contact"
+                    >View Project</a
+                  >
+                  <a
+                    class="btn-outline-primary"
+                    href="#"
+                    >View Code</a
+                  >
+                </div>
+              </div>
+              <h4>ENTERTAINMENT WEB APP</h4>
+              <span>HTML</span>
+              <span>CSS</span>
+              <span>JAVASCRIPT</span>
+            </div>
+            <div>
+              <div class="img-container">
+                <img
+                  src="./assets/images/thumbnail-project-5-large.webp"
+                  alt="memory game"
+                />
+                <div class="btn-container">
+                  <a
+                    class="btn-outline-primary"
+                    href="#contact"
+                    >View Project</a
+                  >
+                  <a
+                    class="btn-outline-primary"
+                    href="#"
+                    >View Code</a
+                  >
+                </div>
+              </div>
+              <h4>MEMORY GAME</h4>
+              <span>HTML</span>
+              <span>CSS</span>
+              <span>JAVASCRIPT</span>
+            </div>
+            <div>
+              <div class="img-container">
+                <img
+                  src="./assets/images/thumbnail-project-6-large.webp"
+                  alt="art gallery"
+                />
+                <div class="btn-container">
+                  <a
+                    class="btn-outline-primary"
+                    href="#contact"
+                    >View Project</a
+                  >
+                  <a
+                    class="btn-outline-primary"
+                    href="#"
+                    >View Code</a
+                  >
+                </div>
+              </div>
+              <h4>ART GALLERY SHOWCASE</h4>
+              <span>HTML</span>
+              <span>CSS</span>
+              <span>JAVASCRIPT</span>
+            </div>
+          </div>
+        </section>
+      </main>
+    </div>
+    <section class="contact-footer-container">
+      <div class="contact">
+        <div class="left">
+          <h2>Contact</h2>
+          <p>
+            I would love to hear about your project and how I could help. Please fill in the form, and I’ll get back to
+            you as soon as possible.
+          </p>
         </div>
-    </body>
+        <div class="right">
+          <form>
+            <input
+              type="text"
+              name=""
+              id=""
+              placeholder="Your Name"
+            />
+            <input
+              type="email"
+              name=""
+              id=""
+              placeholder="Your Email"
+            />
+            <textarea
+              name=""
+              id=""
+              placeholder="Message"
+            ></textarea>
+            <a
+              href=""
+              class="btn-outline-primary"
+              >Send Message</a
+            >
+          </form>
+        </div>
+      </div>
+      <hr />
+      <footer class="footer">
+        <div class="logo">
+          <a href="#">adamkeyes</a>
+        </div>
+        <div class="social-icons">
+          <a href="github.com"
+            ><img
+              src="./assets/images/icon-github.svg"
+              alt="github"
+              width="24.81"
+              height="24"
+          /></a>
+          <a href="linkedin.com"
+            ><img
+              src="./assets/images/icon-linkedin.svg"
+              alt="linkedin"
+              width="24"
+              height="24"
+          /></a>
+          <a href="x.com"
+            ><img
+              src="./assets/images/icon-twitter.svg"
+              alt="twitter"
+              width="23.28"
+              height="18.93"
+          /></a>
+        </div>
+      </footer>
+    </section>
+  </body>
 </html>
